# racetime-obs

./: .codecov.yml  .flake8  .gitignore  .travis.yml  README.md  racetime_client.py  requirements.txt  setup.py  timer.py  travis.yml
.github/ISSUE_TEMPLATE/: bug_report.md
models/: category.py  category_past_races.py  leaderboards.py  race.py  races.py  user.py  user_past_races.py  user_search.py
sample-json/: category.json  leaderboards.json  past_races.json  race.json  races.json  user.json  user_past_races.json  user_search.json
src/: pyproject.toml  racetime_client.py  racetime_obs.py  rtgg_obs.py  timer.py
src/clients/: ladder_client.py  racetime_client.py
src/gadgets/: coop.py  ladder_timer.py  media_player.py  qualifier.py  timer.py
src/helpers/: LogFormatter.py  __init__.py  obs_context_manager.py
src/locales/de/LC_MESSAGES/: racetime-obs.po
src/locales/en/LC_MESSAGES/: racetime-obs.po
src/locales/es/LC_MESSAGES/: racetime-obs.po
src/locales/fr/LC_MESSAGES/: racetime-obs.po
src/locales/pt/LC_MESSAGES/: racetime-obs.po
src/models/: __init__.py  category.py  category_past_races.py  chat_message.py  ladder.py  leaderboards.py  race.py  user.py  user_past_races.py  user_search.py
src/scripting/: __init__.py  coop_scripting.py  ladder_scripting.py  media_player_scripting.py  media_trigger_scripting.py  qualifier_scripting.py  setup_scripting.py  timer_scripting.py
tests/: categories_for_testing.py  conftest.py  races_for_testing.py  test_coop.py  test_media_player.py  test_models.py  test_qualifier.py  test_timer.py  users_for_testing.py
(+9 files in other folders)
