[tool.poetry]
name = "racetime-obs"
version = "0.5"
description = "a plugin to add realtime information from racetime.gg to your stream in OBS."
authors = ["ssbmoro <69113632+ssbm-oro@users.noreply.github.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.8", python = "~3.6.1, <3.7" }
python-dateutil = "^2.8.1"
requests = "^2.25.0"
websockets = { version = "^8.1", python = "^3.6.1" }
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
